Dynamic-access coverage for javassist.util.proxy.SecurityActions$1 (98/105)